# ares

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Legacy Build System.md  README.md  a26.cpp  buildspec.json  deps.json  fc.cpp  sfc.cpp
ares/: CMakeLists.txt
ares/a26/: CMakeLists.txt
ares/a26/tia/: tia.cpp
ares/ares/: ares-version.cpp.in  ares-version.h  ares.cpp  ares.cpp.in  ares.hpp  platform.hpp
ares/ares/node/video/: screen.cpp  screen.hpp
ares/cmake/: os-freebsd.cmake  os-linux.cmake  os-windows.cmake
ares/component/: CMakeLists.txt
ares/component/audio/ay38910/: CMakeLists.txt
ares/component/audio/msm5205/: CMakeLists.txt
ares/component/audio/sn76489/: CMakeLists.txt
ares/component/audio/t6w28/: CMakeLists.txt
ares/component/audio/ym2149/: CMakeLists.txt
ares/component/audio/ym2413/: CMakeLists.txt
ares/cv/: CMakeLists.txt
ares/fc/: CMakeLists.txt
ares/gb/: CMakeLists.txt
ares/gba/: CMakeLists.txt  gba.cpp
ares/md/: CMakeLists.txt  md.hpp
ares/md/cartridge/: cartridge.cpp
ares/md/mcd/: mcd.cpp  mcd.hpp  megald.cpp
ares/ms/: CMakeLists.txt
ares/ms/cartridge/: cartridge.cpp
ares/msx/: CMakeLists.txt
ares/myvision/: CMakeLists.txt
ares/n64/: CMakeLists.txt
ares/n64/aleck64/: controls.cpp
ares/n64/cmake/: os-macos.cmake
ares/n64/cpu/: recompiler.cpp  serialization.cpp
ares/n64/system/: system.cpp
ares/n64/vulkan/: vulkan.cpp
ares/ng/: CMakeLists.txt
ares/ngp/: CMakeLists.txt
ares/pce/: CMakeLists.txt
ares/pce/pcd/: ldrom2.cpp  pcd.hpp
ares/ps1/: CMakeLists.txt  accuracy.hpp
ares/ps1/dma/: channel.cpp
ares/ps1/gpu/: renderer.cpp
ares/saturn/: CMakeLists.txt
ares/sfc/: CMakeLists.txt  sfc.cpp
ares/sg/: CMakeLists.txt
ares/spec/: CMakeLists.txt
ares/ws/: CMakeLists.txt
cmake/: CMakeLists.txt  Dependencies.md  README copy.md  README.md
cmake/common/: .archive-version.json  bootstrap.cmake  buildnumber.cmake  buildspec_common.cmake  ccache.cmake  compiler_common.cmake  dependencies_common.cmake  helpers_common.cmake  helpers_common.cmake.orig  osconfig.cmake  versionconfig.cmake
cmake/finders/: FindAO.cmake  FindGLib.cmake  FindGTK.cmake  FindKosmicKrisp.cmake  FindMoltenVK.cmake  FindOSS.cmake  FindPulseAudio.cmake  FindSDL.cmake  FindSparkle.cmake  FindVulkan.cmake  Findcairo.cmake  Findchd-rs.cmake  Findlibrashader.cmake  Findslang_shaders.cmake  Findudev.cmake  Finduhid.cmake  Findusbhid.cmake
cmake/linux/: compilerconfig.cmake  dependencies.cmake  helpers.cmake
cmake/macos/: buildspec.cmake  compilerconfig.cmake  defaults.cmake  dependencies.cmake  helpers.cmake  xcode.cmake
cmake/macos/resources/: ccache-launcher-c.in  ccache-launcher-cxx.in
cmake/windows/: aarch64-cross-toolchain.cmake  buildspec.cmake  compilerconfig.cmake  defaults.cmake  dependencies.cmake  helpers.cmake
desktop-ui/: CMakeLists.txt  GNUmakefile  desktop-ui.cpp  desktop-ui.hpp
desktop-ui/cmake/: os-linux.cmake  os-macos.cmake  os-windows.cmake  os-windows.cmake.orig  sources.cmake
desktop-ui/cmake/macos/: exportOptions.plist.in
desktop-ui/emulator/: arcade.cpp  emulator.cpp  emulator.hpp  emulator.hpp.orig  game-boy-advance.cpp  mega-drive.cpp  nintendo-64.cpp  nintendo-64dd.cpp  super-famicom.cpp
desktop-ui/input/: hotkeys.cpp  input.hpp
desktop-ui/presentation/: presentation.cpp  presentation.hpp
desktop-ui/program/: drivers.cpp  load.cpp  platform.cpp  program.cpp  program.cpp.orig  program.hpp
desktop-ui/resource/: appcast.xml  ares.plist  ares.plist.in  dev.ares.ares.metainfo.xml.in  shaders.ir
desktop-ui/settings/: audio.cpp  debug.cpp  drivers.cpp  emulators.cpp  emulators.cpp.orig  emulators.hpp  general.cpp  home.cpp  input-systems.cpp  input-systems.hpp  input.cpp  options.cpp  overrides.cpp  overrides.hpp  paths.cpp  settings.cpp  settings.cpp.orig  settings.hpp  settings.hpp.in  sync.cpp  video.cpp
hiro/: CMakeLists.txt  components.hpp
hiro/cmake/: os-linux.cmake  os-linux.cmake.orig  os-macos.cmake  os-windows.cmake  sources.cmake
hiro/cocoa/: application.cpp  application.hpp  header.hpp  platform.cpp  platform.hpp  updater.cpp  updater.hpp  utility.cpp
hiro/cocoa/widget/: combo-edit-item.cpp  combo-edit.cpp  combo-edit.hpp  tab-frame.cpp  tab-frame.hpp  toolbar-item.cpp  toolbar-item.hpp  toolbar.cpp  toolbar.hpp
hiro/core/: application.cpp  application.hpp  color.cpp  core.cpp  core.hpp  object.cpp  object.hpp  shared.hpp  updater.cpp  updater.hpp
hiro/core/widget/: tab-frame.cpp  toolbar-item.cpp  toolbar-item.hpp  toolbar.cpp  toolbar.hpp
hiro/windows/: platform.cpp  platform.hpp  window.cpp
hiro/windows/widget/: canvas.cpp  combo-edit-item.cpp  combo-edit.cpp  combo-edit.hpp
mia/: CMakeLists.txt  CMakeLists.txt.rej  mia.hpp
mia/cmake/: os-macos.cmake
mia/medium/: medium.hpp  mega-cd.cpp  mega-ld.cpp  pc-engine-cd.cpp  playstation.cpp
mia/resource/: mia.plist.in
nall/: CMakeLists.txt  intrinsics.hpp  main.hpp  nall-dummy.cpp  nall.cpp  nall.hpp  path.cpp  platform.cpp  pragma.hpp.in  sljitAllocator.cpp
nall/arithmetic/: natural.hpp
nall/cmake/: os-freebsd.cmake  os-linux.cmake  os-macos.cmake  os-windows.cmake  sources.cmake
nall/nall/: CMakeLists.txt  CMakeLists.txt.orig  file-map.hpp  file.hpp
nall/nall/cmake/: sources.cmake
nall/nall/decode/: chd.hpp
nall/nall/vector/: modify.hpp
ruby/: CMakeLists.txt  GNUmakefile  ruby.cpp  ruby.hpp
ruby/audio/: audio.cpp  avae.cpp  coreaudio.cpp  coreaudio.hpp  directsound.cpp  openal.cpp  sdl.cpp  wasapi.cpp  waveout.cpp  xaudio2.cpp
ruby/cmake/: os-freebsd.cmake  os-linux.cmake  os-macos.cmake  os-windows.cmake
ruby/video/: cgl.cpp  metal.cpp  video.cpp  video.hpp  xvideo.cpp
ruby/video/metal/: ShaderTypes.h  Shaders.metal  main.hpp  metal.cpp  metal.hpp  shaders.ir  shaders.metallib
ruby/video/opengl/: main.hpp  opengl.hpp
tests/arm7tdmi/: CMakeLists.txt
tests/i8080/: CMakeLists.txt
tools/genius/: CMakeLists.txt
tools/genius/cmake/: os-macos.cmake
tools/genius/resource/: genius.desktop  genius.plist.in  genius.rc
tools/sourcery/: CMakeLists.txt
(+63 files in other folders)
